Add keycloak authguard support and dockerized keycloak.
