# API/api/helpers/auth.js
@@ -3,11 +3,11 @@
 var jwt             = require("jsonwebtoken");
 const jwksClient    = require('jwks-rsa');
 
-var ISSUER          = process.env.SSO_ISSUER || "https://sso-dev.pathfinder.gov.bc.ca/auth/realms/prc";
-var JWKSURI         = process.env.SSO_JWKSURI || "https://sso-dev.pathfinder.gov.bc.ca/auth/realms/prc/protocol/openid-connect/certs";
+var ISSUER          = process.env.SSO_ISSUER || "http://localhost:8888/auth/realms/master";
+var JWKSURI         = process.env.SSO_JWKSURI || "http://localhost:8888/auth/realms/master/protocol/openid-connect/certs";
 var JWT_SIGN_EXPIRY = process.env.JWT_SIGN_EXPIRY || "1440"; // 24 hours in minutes.
-var SECRET          = process.env.SECRET || "defaultSecret";
-var KEYCLOAK_ENABLED = process.env.KEYCLOAK_ENABLED || "false";
+var SECRET          = process.env.SECRET || "71e8541cea9180026a0d11d348594953e14cde3e";
+var KEYCLOAK_ENABLED = process.env.KEYCLOAK_ENABLED || "true";
 var winston         = require('winston');
 var defaultLog      = winston.loggers.get('default');
 
@@ -26,29 +26,24 @@ exports.verifyToken = function(req, authOrSecDef, token, callback) {
 
     // If Keycloak is enabled, get the JWKSURI and process accordingly.  Else
     // use local environment JWT configuration.
-    if (KEYCLOAK_ENABLED === "true") {
-      defaultLog.info("Keycloak Enabled, remote JWT verification.");
-      const client = jwksClient({
-        strictSsl: true, // Default value
-        jwksUri: JWKSURI
-      });
-      
-      const kid = jwt.decode(tokenString, { complete: true }).header.kid;
+    defaultLog.info("Keycloak Enabled, remote JWT verification.");
+    const client = jwksClient({
+      strictSsl: true, // Default value
+      jwksUri: JWKSURI
+    });
 
-      client.getSigningKey(kid, (err, key) => {
-        if (err) {
-          defaultLog.error("Signing Key Error:", err);
-          callback(sendError());
-        } else {
-          const signingKey = key.publicKey || key.rsaPublicKey;
+    const kid = jwt.decode(tokenString, { complete: true }).header.kid;
 
-          _verifySecret(currentScopes, tokenString, signingKey, req, callback, sendError);
-        }
-      });
-    } else {
-      defaultLog.info("Proceeding with local JWT verification:", tokenString);
-      _verifySecret(currentScopes, tokenString, SECRET, req, callback, sendError);
-    }
+    client.getSigningKey(kid, (err, key) => {
+      if (err) {
+        defaultLog.error("Signing Key Error:", err);
+        callback(sendError());
+      } else {
+        const signingKey = key.publicKey || key.rsaPublicKey;
+
+        _verifySecret(currentScopes, tokenString, signingKey, req, callback, sendError);
+      }
+    });
   } else {
     defaultLog.error("Token didn't have a bearer.");
     return callback(sendError());
@@ -100,78 +95,80 @@ function _verifySecret (currentScopes, tokenString, secret, req, callback, sendE
   });
 }
 
-exports.issueToken = function(user, deviceId, scopes) {
-  defaultLog.info("user:",user);
-  defaultLog.info("deviceId:",deviceId);
-  defaultLog.info("scopes:",scopes);
-  var crypto = require('crypto');
-  var randomString = crypto.randomBytes(32).toString('hex');
-  var jti = crypto.createHash('sha256').update(user.username + deviceId + randomString).digest('hex');
-  defaultLog.info("JTI:", jti);
+// exports.issueToken = function(user, deviceId, scopes) {
+//   defaultLog.info("user:",user);
+//   defaultLog.info("deviceId:",deviceId);
+//   defaultLog.info("scopes:",scopes);
+//   var crypto = require('crypto');
+//   var randomString = crypto.randomBytes(32).toString('hex');
+//   var jti = crypto.createHash('sha256').update(user.username + deviceId + randomString).digest('hex');
+//   defaultLog.info("JTI:", jti);
 
-  var payload = {
-    name: user.username,
-    preferred_username: user.username,
-    userID: user._id,
-    deviceId: deviceId,
-    jti: jti,
-    iss: ISSUER,
-    realm_access: {
-      roles: scopes
-    }
-  };
+//   var payload = {
+//     name: user.username,
+//     preferred_username: user.username,
+//     userID: user._id,
+//     deviceId: deviceId,
+//     jti: jti,
+//     iss: ISSUER,
+//     realm_access: {
+//       roles: scopes
+//     }
+//   };
 
-  var token = jwt.sign(payload,
-                        SECRET,
-                        {expiresIn: JWT_SIGN_EXPIRY + 'm'});
-  defaultLog.info("ISSUING NEW TOKEN:expiresIn:", JWT_SIGN_EXPIRY + 'm');
+//   var token = jwt.sign(payload,
+//                         SECRET,
+//                         {expiresIn: JWT_SIGN_EXPIRY + 'm'});
+//   defaultLog.info("ISSUING NEW TOKEN:expiresIn:", JWT_SIGN_EXPIRY + 'm');
 
-  return token;
-};
+//   return token;
+// };
 
-var hashPassword = function (user, password) {
-  if (user.salt && password) {
-    var crypto = require('crypto');
-    return crypto.pbkdf2Sync(password, new Buffer(user.salt, 'base64'), 10000, 64, 'sha1').toString('base64');
-  } else {
-    return password;
-  }
-};
+// var hashPassword = function (user, password) {
+//   if (user.salt && password) {
+//     var crypto = require('crypto');
+//     return crypto.pbkdf2Sync(password, new Buffer(user.salt, 'base64'), 10000, 64, 'sha1').toString('base64');
+//   } else {
+//     return password;
+//   }
+// };
 
-exports.setPassword = function (user) {
-  var bcrypt = require("bcrypt-nodejs");
-  user.salt = bcrypt.genSaltSync(16);
-  user.password = hashPassword(user, user.password);
-  return user;
-};
+// exports.setPassword = function (user) {
+//   var bcrypt = require("bcrypt-nodejs");
+//   user.salt = bcrypt.genSaltSync(16);
+//   user.password = hashPassword(user, user.password);
+//   return user;
+// }
 
-// Create instance method for authenticating user
-var authenticate = function (user, password) {
-  defaultLog.info("HASH:", hashPassword(user, password));
-  defaultLog.info("user.password:", user.password);
-  return user.password === hashPassword(user, password);
-};
+/**
+ * Create instance method for authenticating user
+ */
+// var authenticate = function (user, password) {
+//   defaultLog.info("HASH:", hashPassword(user, password));
+//   defaultLog.info("user.password:", user.password);
+//   return user.password === hashPassword(user, password);
+// };
 
-exports.checkAuthentication = function (username, password, cb) {
-  defaultLog.info("authStrategy loading");
-  var User = require('mongoose').model('User');
+// exports.checkAuthentication = function (username, password, cb) {
+//   defaultLog.info("authStrategy loading");
+//   var User = require('mongoose').model('User');
 
-  // Look this user up in the db and hash their password to see if it's correct.
-  User.findOne({
-    username: username.toLowerCase()
-  }, function (err, user) {
-    if (err) {
-      defaultLog.info("ERR:", err);
-      return cb(err);
-    }
-    defaultLog.info("continuing");
-    if (!user || !authenticate(user, password)) {
-      defaultLog.info("bad username or password!");
-      return cb(null, false, {
-        message: 'Invalid username or password'
-      });
-    }
-    defaultLog.info("YAY");
-    return cb(null, user);
-  });
-};
+//   // Look this user up in the db and hash their password to see if it's correct.
+//   User.findOne({
+//     username: username.toLowerCase()
+//   }, function (err, user) {
+//     if (err) {
+//       defaultLog.info("ERR:", err);
+//       return cb(err);
+//     }
+//     defaultLog.info("continuing");
+//     if (!user || !authenticate(user, password)) {
+//       defaultLog.info("bad username or password!");
+//       return cb(null, false, {
+//         message: 'Invalid username or password'
+//       });
+//     }
+//     defaultLog.info("YAY");
+//     return cb(null, user);
+//   });
+// };
