# API/api/swagger/swagger.yaml
@@ -30,12 +30,11 @@ securityDefinitions:
     description: |
      For accessing the API a valid JWT token must be passed in all the queries in
      the 'Authorization' header.
-    
-     A valid JWT token is generated by the API and retourned as answer of a call
-     to the route /login giving a valid user & password.
-  
+
+     A valid JWT token is generated by the API and returned.
+
        The following syntax must be used in the 'Authorization' header :
-  
+
          Bearer xxxxxx.yyyyyyy.zzzzzz
 
 consumes:
@@ -50,9 +49,9 @@ definitions:
   Authentication:
     type: object
     properties:
-      username:
+      seism_username:
         type: string
-        example: "username"
+        example: "seism_username"
       password:
         type: string
         example: "password"
@@ -172,6 +171,9 @@ paths:
       description: "Create a new species object"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - write:application
       parameters:
         - name: species
           in: body
@@ -200,6 +202,9 @@ paths:
       description: "Get META from the request, without returning the payload in question"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - seism_user
       parameters:
         - in: query
           name: isDeleted
@@ -229,6 +234,9 @@ paths:
       description: "Authenticated access to retrieving species"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - seism_user
       parameters:
         - in: query
           name: fields
@@ -300,6 +308,9 @@ paths:
       description: "Get META from the request, without returning the payload in question"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - seism_user
       parameters:
         - name: speciesId
           in: path
@@ -334,6 +345,9 @@ paths:
       description: "Authenticated access to retrieve a species object"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - seism_user
       parameters:
         - name: speciesId
           in: path
@@ -371,6 +385,9 @@ paths:
       description: "Update a species object"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - write:application
       parameters:
         - name: speciesId
           in: path
@@ -399,6 +416,8 @@ paths:
       description: "Delete a species object"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
       parameters:
         - name: speciesId
           in: path
@@ -446,6 +465,9 @@ paths:
       description: "Create a new document object"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - write:document
       consumes:
         - multipart/form-data
       parameters:
@@ -481,6 +503,9 @@ paths:
       description: "Authenticated access to retreiving a document"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - seism_user
       parameters:
         - in: query
           name: _species
@@ -544,6 +569,9 @@ paths:
       description: "Authenticated access to retreiving a document"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - seism_user
       parameters:
         - name: docId
           in: path
@@ -576,6 +604,9 @@ paths:
       description: "Update a document object"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - write:document
       consumes:
         - multipart/form-data
       parameters:
@@ -616,6 +647,8 @@ paths:
       description: "Delete a document object"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
       consumes:
         - application/json
       parameters:
@@ -664,6 +697,9 @@ paths:
       description: "Authenticated access to retrieving a document binary"
       security:
         - Bearer: []
+      x-security-scopes:
+        - seism_admin
+        - seism_user
       parameters:
         - name: docId
           in: path
